Add HTML structure for additional pages: Kontakt, Was ist CHS, Wer sind wir

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Come Home Safe</title>
     <link rel="stylesheet" href="stile.css">
+    <!-- Favicons -->
+    <link rel="icon" href="/assets/Logo/Logo_Inverted.webp">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/Logo/Logo.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/Logo/Logo.png">
+    <meta name="theme-color" content="#001f3f">
 </head>
 <body>
     <!-- Home Section -->
@@ -103,7 +108,7 @@
                             <div class="animated-icon icon-qr" style="--delay: 0.6s;" data-feature="Schnelle Bezahlung">
                                 <img src="assets/QR-Code/QR-Code.png" alt="QR Code" class="icon-img">
                             </div>
-                            <p class="feature-label">Schnelle Bezahlung</p>
+                            <p class="feature-label">Sichere Bezahlung</p>
                         </div>
                     </div>
 
