--- a/was-ist-chs.html
+++ b/was-ist-chs.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Was ist CHS - Come Home Safe</title>
     <link rel="stylesheet" href="stile.css">
+    <!-- Favicons -->
+    <link rel="icon" href="/assets/Logo/Logo_Inverted.webp">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/Logo/Logo.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/Logo/Logo.png">
+    <meta name="theme-color" content="#001f3f">
 </head>
 <body>
     <div class="container">
