Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
                 <h4>Kontakt</h4>
                 <p>Email: dadona@tsn.at</p>
                 <p>Adresse: Höhere Technische Bundeslehr- und Versuchsanstalt Innsbruck Anichstraße, Anichstraße 26 - 28, 6020 Innsbruck</p>
+                <a href="https://discord.gg/UM2W3bSDCY" target="_blank" rel="noopener noreferrer" class="partner-link" style="margin-top: 12px;">
+                    <img src="assets/Discord.png" alt="Discord" class="contact-icon">
+                    <span>Join our Discord</span>
+                </a>
             </div>
             
             <div class="footer-section">
