--- a/wer-sind-wir.html
+++ b/wer-sind-wir.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="refresh" content="0; url=/legacy_pages/wer-sind-wir.html">
-  <title>Seite archiviert</title>
-  <meta name="robots" content="noindex">
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0; url=/legacy_pages/wer-sind-wir.html">
+    <title>Seite archiviert</title>
+    <meta name="robots" content="noindex">
 </head>
 <body>
-  <p>Diese Seite wurde archiviert. Weiterleitung...</p>
+    <p>Diese Seite wurde archiviert. Weiterleitung...</p>
 </body>
 </html>
