Replace Discord SVG icon with image for improved visual consistency

--- a/index.html
+++ b/index.html
@@ -138,11 +138,8 @@
                 <h4>Kontakt</h4>
                 <p>Email: dadona@tsn.at</p>
                 <p>Adresse: Höhere Technische Bundeslehr- und Versuchsanstalt Innsbruck Anichstraße, Anichstraße 26 - 28, 6020 Innsbruck</p>
-                <a href="https://discord.gg/UM2W3bSDCY" target="_blank" rel="noopener noreferrer" class="partner-link contact-discord" style="margin-top: 12px;">
-                    <svg class="contact-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 245 240" role="img" aria-hidden="true">
-                        <path fill="currentColor" d="M104.4 104.6c-5.7 0-10.2 4.9-10.2 10.9 0 6 4.6 10.9 10.2 10.9 5.7 0 10.2-4.9 10.2-10.9 0-6-4.6-10.9-10.2-10.9zm36.2 0c-5.7 0-10.2 4.9-10.2 10.9 0 6 4.6 10.9 10.2 10.9 5.7 0 10.2-4.9 10.2-10.9 0-6-4.5-10.9-10.2-10.9z"/>
-                        <path fill="currentColor" d="M189.5 20H55.5C38.3 20 24 34.2 24 51.4v95.4c0 17.2 14.3 31.4 31.5 31.4h97.6l-4.6-16.1 11 9.4 10.1 8.6 17.1 14.6V51.4C216 34.2 201.7 20 184.5 20z" opacity="0.0"/>
-                    </svg>
+                <a href="https://discord.gg/UM2W3bSDCY" target="_blank" rel="noopener noreferrer" class="partner-link" style="margin-top: 12px;">
+                    <img src="assets/Discord.png" alt="Discord" class="contact-icon">
                     <span>Join our Discord</span>
                 </a>
             </div>
