Update HTML structure for improved accessibility and SEO

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <h3 data-i18n="app.title">Come Home Safe App</h3>
                         <p data-i18n="app.status">Die App ist noch in der Entwicklungsphase und noch nicht verfügbar. Treten Sie für weitere Infos unseren Discord-Kanal bei.</p>
                         <div class="app-download">
-                            <a href="https://discord.gg/UM2W3bSDCY" target="_blank" rel="noopener noreferrer" class="partner-link discord-btn" style="margin-top: 12px;">
+                            <a href="https://discord.gg/GhapCPNFmG" target="_blank" rel="noopener noreferrer" class="partner-link discord-btn" style="margin-top: 12px;">
                                 <img src="assets/Discord.png" alt="Discord" class="contact-icon">
                                 <span data-i18n="app.discord">Join our Discord</span>
                             </a>
@@ -139,7 +139,7 @@
                 <h4 data-i18n="footer.contact.title">Kontakt</h4>
                 <p data-i18n="footer.contact.email">Email: dadona@tsn.at</p>
                 <p data-i18n="footer.contact.address">Adresse: Höhere Technische Bundeslehr- und Versuchsanstalt Innsbruck Anichstraße, Anichstraße 26 - 28, 6020 Innsbruck</p>
-                <a href="https://discord.gg/UM2W3bSDCY" target="_blank" rel="noopener noreferrer" class="partner-link" style="margin-top: 12px;">
+                <a href="https://discord.gg/GhapCPNFmG" target="_blank" rel="noopener noreferrer" class="partner-link" style="margin-top: 12px;">
                     <img src="assets/Discord.png" alt="Discord" class="contact-icon">
                     <span data-i18n="footer.contact.discord">Join our Discord</span>
                 </a>
