Update index.html for improved accessibility and language support

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Come Home Safe - Sichere Heimwege</title>
-    <link rel="stylesheet" href="stile.css">
+    <link rel="stylesheet" href="stile.css?v=20251222">
     <link rel="icon" type="image/png" href="assets/Logo/Logo (New)/Logo_New.png">
     <link rel="apple-touch-icon" href="assets/Logo/Logo (New)/Logo_New.png">
     <meta name="theme-color" content="#001f3f">
