Update contact email in kontakt.html and adjust CSS for container layout

--- a/legacy_pages/kontakt.html
+++ b/legacy_pages/kontakt.html
@@ -216,7 +216,7 @@
                     <div class="contact-info">
                         <div class="contact-card">
                             <h4>📧 Email</h4>
-                            <p><a href="mailto:dadona@tsn.at">dadona@tsn.at</a></p>
+                            <p><a href="mailto:come_home_safe@tutamail.com">come_home_safe@tutamail.com</a></p>
                         </div>
                     </div>
                 </div>
