Update contact email in index.html; remove legacy contact and information pages

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </div>
             <div class="footer-section">
                     <h4 data-i18n="footer.contact.title">Kontakt</h4>
-                <p><span data-i18n="footer.contact.emailLabel">E-Mail:</span> <a href="mailto:dadona@tsn.at">dadona@tsn.at</a></p>
+                <p><span data-i18n="footer.contact.emailLabel">E-Mail:</span> <a href="mailto:come_home_safe@tutamail.com">come_home_safe@tutamail.com</a></p>
                     <p><a href="https://discord.gg/GhapCPNFmG" target="_blank" rel="noopener noreferrer" class="discord-link"><img src="assets/Discord.png" alt="Discord" class="footer-icon"> <span data-i18n="footer.contact.discord">Discord</span></a></p>
             </div>
             <div class="footer-section">
